@@ -29,9 +29,7 @@ if(!includeTemplate('photo.header.tpl')) {
             <table cellspacing="0" cellpadding="0" class="mod_toplight_bg">
               <tr>
                 <td class="mod_toplight_left" align="right"></td>
-                <td nowrap class="head" align="left">
-                  &nbsp;<?php echo $gallery->album->fields["title"] ?> &nbsp;
-                </td>
+                <td class="head" align="left">&nbsp;<?php echo $gallery->album->fields["title"] ?> &nbsp;</td>
                 <td class="mod_toplight_right" align="left"></td>
               </tr>
             </table>
