@@ -24,7 +24,7 @@
             <table cellspacing="0" cellpadding="0" class="mod_toplight_bg">
               <tr>
                 <td class="mod_toplight_left" align="right"></td>
-                <td nowrap class="head" align="left"><?php echo _("Gallery statistics") . $stats_title; ?></td>
+                <td class="head" align="left"><?php echo _("Gallery statistics") . $stats_title; ?></td>
                 <td class="mod_toplight_right" align="left"></td>
               </tr>
             </table>
